[tool.black]
line-length = 100

[tool.poetry]
name = "sym-community-scripts"
version = "0.1.0"
description = "Open Source scripts for use by the Sym community."
authors = ["Yasyf Mohamedali <yasyf@symops.io>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.22"
parliament = "^1.2.3"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
identitystore_userids = "sym_community_scripts.identitystore_userids:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
